<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@mipmap/baseline_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_scan"
        android:icon="@mipmap/baseline_camera_alt_black_24dp"
        android:title="@string/scan" />
    <item
        android:id="@+id/bottom_record"
        android:icon="@mipmap/baseline_note_add_black_24dp"
        android:title="@string/receiptRec" />
    <item
        android:id="@+id/bottom_fridge"
        android:icon="@mipmap/baseline_bluetooth_black_24dp"
        android:title="@string/checkFridge" />

    <item
        android:id="@+id/bottom_settings"
        android:icon="@mipmap/baseline_settings_applications_black_24dp"
        android:title="@string/action_settings" />
</menu>